--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
     "@angular/service-worker": "~9.1.13",
+    "dexie": "^3.2.0",
     "idb": "^7.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
